# raytracer

./: .gitignore  CMakeLists.txt  main.cpp
headers/: GeometricObject.h  Plane.h  Ray.h  ShadeRec.h  SingleSphereTracer.h  Sphere.h  Tracer.h  ViewPlane.h  World.h
src/: ShadeRec.cpp  World.cpp
